# trikala

./: .commitlintrc.json  .cursorrules  .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
cli/trikala/: Cargo.toml
cli/trikala/src/: main.rs
cli/trikala/src/commands/: build.rs  claim.rs  deploy.rs  dev.rs  doctor.rs  mod.rs  new.rs  upgrade.rs  use.rs
crates/trikala-core/: Cargo.toml
crates/trikala-core/src/: lib.rs
docs/: ai-prompt-cards.md  hosting-policy.md  phases.md  quickstart.md  showroom-plan.md  telemetry-schema.md  trikala-architecture.md  trikala-axioms-v1.md  trikala-pitch.md
examples/cozy-demo/: Cargo.toml  README.md
examples/cozy-demo/src/: boss.rs  character.rs  geometry.rs  grass.rs  hud.rs  hud.wgsl  main.rs  monster.rs  scene.wgsl  weapon.rs  world.rs
examples/hello/: Cargo.toml
examples/mood/: Cargo.toml
examples/mood/assets/: CREDITS.md
examples/mood/src/: anim.rs  character.rs  main.rs
examples/mood/src/shaders/: decal.wgsl  grass.wgsl  main.wgsl  portal.wgsl  sand.wgsl  skin_shadow.wgsl  water.wgsl
examples/mood/src/subsystems/: fade.rs  portal.rs  sand.rs
examples/showroom/: Cargo.toml
examples/showroom/src/: main.rs
scripts/: check-template.sh
templates/blank/: .gitignore  Cargo.toml  README.md  trikala.toml
templates/blank/art/: README.md
templates/blank/fonts/: README.md
templates/blank/music/: README.md
templates/blank/sfx/: README.md
templates/blank/src/: main.rs
templates/portal/: .gitignore  Cargo.toml  README.md  trikala.toml
templates/portal/art/: README.md
templates/portal/fonts/: README.md
templates/portal/music/: README.md
templates/portal/sfx/: README.md
templates/portal/src/: geometry.rs  main.rs  pipelines.rs
templates/portal/src/shaders/: fade.wgsl  shadow.wgsl  skin.wgsl
templates/portal/src/subsystems/: grass.rs  mod.rs  water.rs
