[package]
name        = "trikala"
description = "Born, built, shipped — a Rust + wgpu game pipeline."
default-run = "trikala"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
rust-version.workspace = true

[[bin]]
name = "trikala"
path = "src/main.rs"

# The `cargo trikala …` subcommand alias is opt-in via
# `cargo install cargo-trikala`. It lands in alpha.2 as its own bin
# (src/bin/cargo-trikala.rs) — duplicating main.rs here triggers a
# cargo warning, so we keep the standalone bin only for alpha.1.

[dependencies]
trikala-core = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
tracing      = { workspace = true }
