[package]
name        = "trikala-core"
description = "Platform-agnostic types for the trikala game pipeline"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
rust-version.workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
