# mood prototype — primitives-only scene to validate the lighting and
# composition of the showroom design before committing to glTF assets.
# Throw-away artifact: if the mood reads right, the full showroom in
# alpha.2 builds on this; if not, we iterate here cheaply.

[package]
name    = "trikala-mood"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wgpu     = "=27.0.1"
winit    = "=0.30.5"
pollster = "=0.4.0"
bytemuck = { version = "=1.22.0", features = ["derive"] }
glam     = { version = "=0.29.2", features = ["bytemuck"] }
gltf     = { version = "=1.4.1", default-features = false, features = ["utils", "names", "import"] }
