# Portal template — depends on wgpu/winit directly, not on trikala-*.
# Per axiom F30: templates own their dependencies. trikala only ships
# the CLI + hosting; the code in this template is yours to fork.

[package]
name    = "{{project-name}}"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Same exact pins as trikala foundation (F21). Bumping any of these
# is a deliberate choice — change here, not silently via `cargo update`.
wgpu     = "=27.0.1"
winit    = "=0.30.5"
pollster = "=0.4.0"
bytemuck = { version = "=1.22.0", features = ["derive"] }
glam     = "=0.29.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "=0.1.7"
console_log              = "=1.0.0"
log                      = "=0.4.22"
wasm-bindgen             = "=0.2.100"
wasm-bindgen-futures     = "=0.4.50"
web-sys = { version = "=0.3.77", features = ["Document", "Window", "Element"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
